--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "socket.io-chat",
-  "version": "0.0.0",
-  "description": "A simple chat client using socket.io",
+  "name": "App_2021",
+  "version": "1.0.0",
+  "description": "A simple chat demo for Socket.IO",
   "main": "index.js",
-  "author": "[-V-]",
-  "private": true,
-  "license": "BSD",
-  "dependencies": {
-    "express": "~4.17.1",
-    "socket.io": "^4.0.0"
-  },
   "scripts": {
-    "start": "node index.js"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/V-core9/App_2021.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/V-core9/App_2021/issues"
+  },
+  "homepage": "https://github.com/V-core9/App_2021#readme"
 }
