--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "App_2021",
   "version": "1.0.0",
   "description": "A simple chat demo for Socket.IO",
-  "main": "index.js",
+  "main": "app_server.js",
+  "dependencies": {
+    "express": "~4.17.1",
+    "socket.io": "^4.0.0"
+  },
   "scripts": {
+    "start": "node app_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
