--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/V-core9/App_2021/issues"
   },
