--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/V-core9/App_2021/issues"
   },
-  "homepage": "https://github.com/V-core9/App_2021#readme"
+  "homepage": "https://github.com/V-core9/App_2021#readme",
+  "devDependencies": {
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
+  }
 }
