--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "app_server.js",
   "dependencies": {
     "express": "~4.17.1",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "css-loader": "^6.2.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "start": "node app_server.js",
@@ -22,8 +28,5 @@
     "url": "https://github.com/V-core9/App_2021/issues"
   },
   "homepage": "https://github.com/V-core9/App_2021#readme",
-  "devDependencies": {
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
-  }
+  "devDependencies": {}
 }
