--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "node app_server.js",
+    "webpack": "bash -c \" npx webpack --config webpack.config.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
