--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "start": "node static_server.js",
-    "dev_mode": "start bash -c \" nodemon static_server.js \" ",
+    "start": "node app_server.js",
+    "dev_mode": "start bash -c \" nodemon ./SOURCE/app_server.js \" ",
     "webpack": "bash -c \" npx webpack --config webpack.config.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
