--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_server": " start bash -c \" node  express__static.js \"  ",
-    "start_app": " bash -c \" npm run set_mode_live  \" &&  bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
-    "start_dev": " bash -c \" npm run set_mode_dev  \" && start bash -c \" nodemon --exec npm run build  \" &&  bash -c \" npm run start_server  \"  ",
-    "set_mode_live": " bash -c \" node config/_configure.js mode=live  \" ",
-    "set_mode_dev": " bash -c \" node config/_configure.js mode=dev  \" ",
-    "build": " bash -c \" npx webpack \" && bash -c \" node _dev/auto_browser_refresh/server.updateBuildInfoFile.js ; \"  && bash -c \" node-sass -r src/style -o dist/style  \"  "
+    "start_app": "  bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
+    "start_dev": "  start bash -c \" nodemon --exec npm run build  \" &&  bash -c \" npm run start_server  \"  ",
+    "build": " bash -c \" npx webpack \" && bash -c \" node _dev/auto_browser_refresh/server.updateBuildInfoFile.js ; \"  && bash -c \" node-sass -r SOURCE/FrontEnd/scss -o PUBLIC/assets/style/css  \"  "
   },
   "repository": {
     "type": "git",
