--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "style-loader": "^3.3.0"
   },
   "scripts": {
+    "ngrok_start": " start bash -c \" bash system/ngrok_autorunner.sh \" ",
+    "ngrok_download": " start bash -c \" cd system ; curl https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip > ngrok_win.zip ; unzip ngrok_win.zip ; rm ngrok_win.zip \" && exit 1 ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_server": " start bash -c \" node  SOURCE/BackEnd/app_server.js \"  ",
     "start_app": "  bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
