--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "ngrok_download": " start bash -c \" cd system ; curl https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip > ngrok_win.zip ; unzip ngrok_win.zip ; rm ngrok_win.zip \" && exit 1 ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_server": " start bash -c \" node  SOURCE/BackEnd/app_server.js \"  ",
-    "start_app": "  bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
-    "start_dev": "  start bash -c \" nodemon --exec npm run build  \" &&  bash -c \" npm run start_server  \"  ",
+    "start_app": "  start bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
+    "start_dev": " nodemon --exec  start bash  -c \"npm run build && npm run start_server  \"   ",
     "build": " bash -c \" rm -r -f ./PUBLIC/* \" && bash -c \" npx webpack \" && bash -c \" node SOURCE/FrontEnd/v_modules/__autorefresh_browser/json_updater.js; \"  && bash -c \" node-sass -r SOURCE/FrontEnd/scss -o PUBLIC/assets/style/css  \" && bash -c \" cp -r -f ./SOURCE/static/* ./PUBLIC/ \"   "
   },
   "repository": {
