--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "style-loader": "^3.3.0"
   },
   "scripts": {
+    "g_install": "npm install -g clinic autocannon ",
+    "clinic_doctor": "clinic doctor --on-port 'autocannon localhost:420' -- node  SOURCE/BackEnd/app_server.js",
+    "clinic_flame": "clinic flame --on-port 'autocannon localhost:420' -- node  SOURCE/BackEnd/app_server.js",
+    "clinic_bubbleprof": "clinic bubbleprof --on-port ‘autocannon localhost:420 -- node  SOURCE/BackEnd/app_server.js",
     "ngrok_start": " start bash -c \" bash system/ngrok_autorunner.sh \" ",
     "ngrok_download": " start bash -c \" cd system ; curl https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip > ngrok_win.zip ; unzip ngrok_win.zip ; rm ngrok_win.zip \" && exit 1 ",
     "test": "echo \"Error: no test specified\" && exit 1",
