--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "app_server.js",
   "dependencies": {
     "compression": "^1.7.4",
+    "css-loader": "^6.3.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
+    "open": "^8.3.0",
+    "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "css-loader": "^6.3.0",
-    "style-loader": "^3.3.0"
+    "webpack-cli": "^4.8.0"
   },
   "scripts": {
     "g_install": "npm install -g clinic autocannon ",
@@ -23,7 +24,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_server": " start bash -c \" node  SOURCE/BackEnd/app_server.js \"  ",
     "start_app": "  start bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
-    "start_dev": " nodemon --exec  start bash  -c \"npm run build && npm run start_server  \"   ",
+    "start_dev": " start bash -c \"nodemon --exec  npm run build\" && start bash -c \" nodemon --exec  npm run start_server  \"   ",
     "build": " bash -c \" rm -r -f ./PUBLIC/* \" && bash -c \" npx webpack \" && bash -c \" node SOURCE/FrontEnd/v_modules/__autorefresh_browser/json_updater.js; \"  && bash -c \" node-sass -r SOURCE/FrontEnd/scss -o PUBLIC/assets/style/css  \" && bash -c \" cp -r -f ./SOURCE/static/* ./PUBLIC/ \"   "
   },
   "repository": {
@@ -36,6 +37,5 @@
   "bugs": {
     "url": "https://github.com/V-core9/App_2021/issues"
   },
-  "homepage": "https://github.com/V-core9/App_2021#readme",
-  "devDependencies": {}
+  "homepage": "https://github.com/V-core9/App_2021#readme"
 }
