--- a/package.json
+++ b/package.json
@@ -1,31 +1,12 @@
 {
-  "name": "v_app_demo",
+  "name": "v_web_app",
   "version": "1.0.0",
-  "description": "A simple chat demo for Socket.IO",
-  "main": "app_server.js",
+  "description": "A simple web demo ",
+  "main": "index.js",
   "dependencies": {
-    "compression": "^1.7.4",
-    "css-loader": "^6.3.0",
-    "express": "^4.17.1",
-    "lodash": "^4.17.21",
-    "node-sass": "^6.0.1",
-    "open": "^8.3.0",
-    "style-loader": "^3.3.0",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
   },
   "scripts": {
-    "g_install": "npm install -g clinic autocannon ",
-    "clinic_doctor": "clinic doctor --on-port 'autocannon localhost:420' -- node  SOURCE/BackEnd/app_server.js",
-    "clinic_flame": "clinic flame --on-port 'autocannon localhost:420' -- node  SOURCE/BackEnd/app_server.js",
-    "clinic_bubbleprof": "clinic bubbleprof --on-port 'autocannon localhost:420 -- node  SOURCE/BackEnd/app_server.js",
-    "ngrok_start": " start bash -c \" bash system/ngrok_autorunner.sh \" ",
-    "ngrok_download": " start bash -c \" cd system ; curl https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip > ngrok_win.zip ; unzip ngrok_win.zip ; rm ngrok_win.zip \" && exit 1 ",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start_server": " start bash -c \" node  SOURCE/BackEnd/app_server.js \"  ",
-    "start_app": "  start bash -c \" npm run build  \" &&  bash -c \" npm run start_server  \" ",
-    "start_dev": " start bash -c \"nodemon --exec  npm run build\" && start bash -c \" nodemon ./SOURCE/BackEnd/app_server.js   \"   ",
-    "build": " bash -c \" rm -r -f ./PUBLIC/* \" && bash -c \" npx webpack \" && bash -c \" node SOURCE/FrontEnd/v_modules/__autorefresh_browser/json_updater.js; \"  && bash -c \" node-sass -r SOURCE/FrontEnd/scss -o PUBLIC/assets/style/css  \" && bash -c \" cp -r -f ./SOURCE/static/* ./PUBLIC/ \"   "
+    "test" : " echo \"NO TESTS\" && exit 1"
   },
   "repository": {
     "type": "git",
