--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "A simple web demo ",
   "main": "index.js",
-  "dependencies": {
-  },
   "scripts": {
-    "test" : " echo \"NO TESTS\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/V-core9/App_2021/issues"
   },
-  "homepage": "https://github.com/V-core9/App_2021#readme"
+  "homepage": "https://github.com/V-core9/App_2021#readme",
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
