--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple web demo ",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack "
   },
   "repository": {
     "type": "git",
